--- a/index.html
+++ b/index.html
@@ -596,6 +596,10 @@
             <h1>Nicola Rischia</h1>
             <p>Sviluppatore web appassionato di design e tecnologie moderne.</p>
             <a href="#chi-sono" aria-label="Info" class="info-btn"><i class="fas fa-info-circle"></i></a>
+            <a href="cv-nicola-rischia.pdf" download class="info-btn" aria-label="Scarica CV"
+                style="margin-left: 0.5rem;">
+                <i class="fas fa-scroll"></i>
+            </a>
         </div>
     </header>
 
@@ -625,7 +629,7 @@
                 <div class="icon">
                     <i class="bx bx-grid" style="color: #00ff62;"></i>
                 </div>
-                <h3>Costruzione Siti Web - Wix</h3>
+                <h3>Siti Wix Professionali</h3>
                 <p>
                     Realizzo siti professionali su Wix, facili da gestire e pronti per i tuoi clienti.
                 </p>
@@ -770,6 +774,9 @@
             </a>
             <a href="https://wa.me/3664079323" target="_blank">
                 <i class="fab fa-whatsapp" style="color: #25D366; margin-right: 0.5rem;"></i>WhatsApp
+            </a>
+            <a href="cv-nicola-rischia.pdf" download target="_blank">
+                <i class="fas fa-scroll" style="color: #ff3c00; margin-right: 0.5rem;"></i>Scarica CV
             </a>
         </div>
     </section>
