Aggiornamento box di ricerca

--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
         <div class="search-backdrop"></div>
         <div class="search-box">
             <button id="close-search" aria-label="Chiudi ricerca">&times;</button>
-            <input type="text" id="search-input" placeholder="Cerca nel sito..." autocomplete="off" />
+            <input type="text" id="search-input" placeholder="✨ Cerca nel sito..." autocomplete="off" />
             <div id="search-sections">
                 <div class="search-section">
                     <div class="search-section-title">Naviga alle sezioni</div>
